--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,19 @@ img {
     color: #fff;
 }
 
+/* Hide content initially - show them from JS file */
+
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+    display: none;
+    /* opacity: 0; */
+}
+
+.show {
+    display: block !important;
+}
+
 #tab-1-content .tab-1-content-inner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -288,4 +301,73 @@ img {
     font-size: 1rem;
     padding: 0.8rem 1.3rem;
     text-transform: uppercase;
+}
+
+.btn-icon {
+    margin-left: 1rem;
+}
+
+@media(max-width: 960px) {
+    .showcase {
+        height: 70vh
+    }
+
+    .hide-sm {
+        display: none
+    }
+
+    .showcase-top img {
+        top: 30%;
+        left: 5%;
+        transform: translate(0);
+    }
+
+    .showcase-content h1 {
+        font-size: 3.7rem;
+        line-height: 1;
+    }
+
+    .showcase-content p {
+        font-size: 1.5rem;
+    }
+
+    .btn-xl {
+        font-size: 1.5rem;
+        padding: 1.4rem 2rem;
+    }
+
+    .text-xl {
+        font-size: 1.5rem;
+    }
+    .text-lg {
+        font-size: 1.3rem;
+    }
+    .text-md {
+        font-size: 1rem;
+    }
+
+    .footer .footer-cols {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media(max-width: 700px) {
+    .showcase::after {
+        background: rgba(0, 0, 0, 0.3);
+    }
+
+    #tab-1-content .tab-1-content-inner {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    #tab-2-content .tab-2-content-top {
+        display: block;
+        text-align: center;
+    }
+
+    #tab-2-content .tab-2-content-bottom {
+        grid-template-columns: 1fr;
+    }
+
 }
